<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcomming"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/upcomming" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_map_history"
            android:icon="@drawable/map_icon"
            android:title="@string/map_history" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>