<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trip.AddTripActivity"
    android:background="@color/add_trip">

    <EditText
        android:id="@+id/title"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/trip_title"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_type" />

    <Button
        android:id="@+id/addTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/button_shape"
        android:onClick="addTrip"
        android:text="@string/add_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />


    <RadioGroup
        android:id="@+id/trip_repeated"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/repeat_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/repeat_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:padding="8dp"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/repeat_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/monthly" />
    </RadioGroup>

    <fragment
        android:id="@+id/startfragment"
        android:name="com.iti.intake40.tripista.StartAutoCompleteFragment"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:minWidth="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <fragment
        android:id="@+id/endfragment"
        android:name="com.iti.intake40.tripista.EndAutoCompleteFragment"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:minWidth="300dp"
        app:layout_constraintStart_toStartOf="@+id/startfragment"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/destination"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/startfragment" />

    <ImageButton
        android:id="@+id/dateBtn"
        android:layout_width="57dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="setDate"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_month" />

    <ImageButton
        android:id="@+id/timeBtn"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="setTime"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/dateBtn"
        app:layout_constraintTop_toTopOf="@+id/dateBtn"
        app:srcCompat="@drawable/ic_clock" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endfragment" />

    <ImageButton
        android:id="@+id/backTime"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="setbackTime"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/backDate"
        app:layout_constraintTop_toTopOf="@+id/backDate"
        app:srcCompat="@drawable/ic_clock" />

    <ImageButton
        android:id="@+id/backDate"
        android:layout_width="57dp"
        android:layout_height="58dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="setBackDate"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/dateBtn"
        app:layout_constraintTop_toBottomOf="@+id/return_details"
        app:srcCompat="@drawable/ic_month" />

    <TextView
        android:id="@+id/return_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/return_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateBtn" />

    <RadioGroup
        android:id="@+id/trip_type"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <RadioButton
            android:id="@+id/one_way_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:padding="8dp"
            android:text="@string/one_way" />

        <RadioButton
            android:id="@+id/round_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/round_trip" />
    </RadioGroup>

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backDate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/alarm_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backDate" />

</androidx.constraintlayout.widget.ConstraintLayout>