<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.auth.signin.SigninActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_user_email_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_email_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_user_email_phone"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:contentDescription="@string/next"
            android:src="@drawable/arrow_right" />

        <LinearLayout
            android:id="@+id/linear_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/txt_or"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="23sp" />

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_have_account"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/txt_sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/txt_have_account"
            android:text="@string/signup_activity_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp" />
    </LinearLayout>
</RelativeLayout>